2005-08-22  Bertram Felgenhauer  <int-e@gmx.de>

	* src/cairo-pen.c (_cairo_pen_vertices_needed): use correctly
	transposed version of the matrix and fix up the comments above
	to use row vector notation.

2005-08-22  Tor Lillqvist  <tml@novell.com>

	* configure.in: Calculate LT_CURRENT_MINUS_AGE (which forms part
	of the DLL name on Win32), and AC_SUBST it.

	* Makefile.am: Add target "zips" to create zip file based
	distribution for Win32.

	* src/Makefile.am: Produce a cairo.def file for distribution by
	preprocessing the relevant header files and grepping for
	declarations of functions that start with cairo_. Works for now,
	will have to modify later if necessary. Use the .def file when
	linking on Win32.

2005-08-22  Owen Taylor  <otaylor@redhat.com>

	Support artificial bold fonts with FC_EMBOLDEN; patch
	from Jackey Yang and sunmoon1997.

	* configure.in: Check for FT_GlyphSlot_Embolden()

	* src/cairo-ft-font.c: Call FT_GlyphSlot_Embolden for
	fonts where FC_EMBOLDEN is set but that aren't bold.
	Add another private flag for this.

2005-08-22  Carl Worth  <cworth@cworth.org>

	* test/Makefile.am (EXTRA_DIST): Fix typo that was causing make
	dist to fail.

2005-08-22  Owen Taylor  <otaylor@redhat.com>

	* test/text-rotate.c (draw): Use floor(0.5+x) rather than
	round(), which is C99. (David Hollenberg)

2005-08-22  Owen Taylor  <otaylor@redhat.com>

	* autogen.sh: Set LC_ALL=C rather than LANG and LC_NUMERIC to be
	robust against whatever settings the user has. (Martin Dobias)

2005-08-21  Billy Biggs  <vektor@dumbterm.net>

	* src/cairo.c: (cairo_paint_with_alpha): Optimize away calls to
	cairo_paint_with_alpha() if the alpha value given is <= 0.

	* src/cairoint.h: Add a new macro CAIRO_ALPHA_IS_ZERO.

2005-08-21  Billy Biggs  <vektor@dumbterm.net>

	Fix for bug #4172:

	* src/cairo-pattern.c: (_cairo_pattern_shader_gaussian),
	(_cairo_image_data_set_linear), (_cairo_image_data_set_radial):